--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,10 +35,16 @@
 }
 .centro{
 	text-align: center;
+	align-items:center;
 	padding:2px;
 }
 .espaco{
 	padding-right:50px;
+}
+.borda{
+	border-radius:50%;
+	width:80px;
+	height:80px;
 }
 *{
 	margin:0;
@@ -46,6 +52,7 @@
 }
 body{	
 	background:url(../imagem/fundo4.jpg)no-repeat;
+	background-size:cover;
 	
 }
 li{
@@ -59,6 +66,30 @@ h3{
 	color:white;
 
 }
+
+i{
+	color: 	#1E90FF;
+	font-size:45px;
+	 
+}
 .white{
 	color: white;
+}
+
+td, th {
+  padding:.0em;
+  margin:0;
+  /*border: 1px solid #ccc;*/
+  text-align: center;
+}
+
+th{
+  /*background-color: #EEE;*/
+}
+
+table{
+  width: 50%;
+  margin:0 auto;
+  table-layout: fixed;
+  text-align: center;
 }
